# bazof

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/azof/: Cargo.toml
crates/azof-cli/: Cargo.toml
crates/azof-cli/src/: main.rs  test_bench.rs
crates/azof-datafusion/: Cargo.toml  README.md
crates/azof-datafusion/examples/: query_example.rs
crates/azof-datafusion/src/: context.rs  lib.rs  parse.rs
crates/azof/src/: as_of.rs  errors.rs  lakehouse.rs  lib.rs  metadata.rs  schema.rs  table.rs
crates/bazof/: Cargo.toml
crates/bazof-cli/: Cargo.toml
crates/bazof-cli/src/: main.rs  test_bench.rs
crates/bazof-datafusion/: Cargo.toml  README.md
crates/bazof-datafusion/examples/: query_example.rs
crates/bazof-datafusion/src/: context.rs  lib.rs  parse.rs
crates/bazof/src/: as_of.rs  errors.rs  lakehouse.rs  lib.rs  metadata.rs  projection.rs  schema.rs  table.rs
docs/: architecture.md
src/: as_of.rs  errors.rs  ffi.rs  lakehouse.rs  lib.rs  main.rs  metadata.rs  schema.rs  table.rs  test_bench.rs
test-data/financials/: s1.json  year_2000_base.parquet  year_2000_q1_delta.parquet  year_2000_q2_base.parquet  year_2000_q2_delta.parquet  year_2000_q3_base.parquet  year_2000_q3_delta.parquet  year_2000_q4_base.parquet  year_2000_q4_delta.parquet  year_2001_base.parquet  year_2001_q1_delta.parquet  year_2001_q2_base.parquet  year_2001_q2_delta.parquet  year_2001_q3_base.parquet  year_2001_q3_delta.parquet  year_2001_q4_base.parquet  year_2001_q4_delta.parquet  year_2002_base.parquet  year_2002_q1_delta.parquet  year_2002_q2_base.parquet  year_2002_q2_delta.parquet  year_2002_q3_base.parquet  year_2002_q3_delta.parquet  year_2002_q4_base.parquet  year_2002_q4_delta.parquet  year_2003_base.parquet  year_2003_q1_delta.parquet  year_2003_q2_base.parquet  year_2003_q2_delta.parquet  year_2003_q3_base.parquet  year_2003_q3_delta.parquet  year_2003_q4_base.parquet  year_2003_q4_delta.parquet  year_2004_base.parquet  year_2004_q1_delta.parquet  year_2004_q2_base.parquet  year_2004_q2_delta.parquet  year_2004_q3_base.parquet  year_2004_q3_delta.parquet  year_2004_q4_base.parquet  (+130 more)
test-data/ltm_revenue/: s1.json  year_2000_base.parquet  year_2000_q1_delta.parquet  year_2000_q2_base.parquet  year_2000_q2_delta.parquet  year_2000_q3_base.parquet  year_2000_q3_delta.parquet  year_2000_q4_base.parquet  year_2000_q4_delta.parquet  year_2001_base.parquet  year_2001_q1_delta.parquet  year_2001_q2_base.parquet  year_2001_q2_delta.parquet  year_2001_q3_base.parquet  year_2001_q3_delta.parquet  year_2001_q4_base.parquet  year_2001_q4_delta.parquet  year_2002_base.parquet  year_2002_q1_delta.parquet  year_2002_q2_base.parquet  year_2002_q2_delta.parquet  year_2002_q3_base.parquet  year_2002_q3_delta.parquet  year_2002_q4_base.parquet  year_2002_q4_delta.parquet  year_2003_base.parquet  year_2003_q1_delta.parquet  year_2003_q2_base.parquet  year_2003_q2_delta.parquet  year_2003_q3_base.parquet  year_2003_q3_delta.parquet  year_2003_q4_base.parquet  year_2003_q4_delta.parquet  year_2004_base.parquet  year_2004_q1_delta.parquet  year_2004_q2_base.parquet  year_2004_q2_delta.parquet  year_2004_q3_base.parquet  year_2004_q3_delta.parquet  year_2004_q4_base.parquet  (+130 more)
test-data/table0/: base.csv  base.parquet  delta1.csv  delta1.parquet  s1.json
test-data/table1/: delta1.csv  delta1.parquet  delta2.csv  delta2.parquet  s1.json
test-data/table2/: base.csv  base.parquet  delta1.csv  delta1.parquet  s1.json
