[package]
name = "bazof"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
chrono = "0.4.39"
arrow-array = "54.2.0"
arrow = "54.2.0"
thiserror = "2.0.11"
parquet = "54.2.0"
object_store = "0.11.2"
tokio = { version = "1", features = ["full"] }