[package]
name = "bazof"
version = "0.1.0"
authors = ["Maciej Lesiczka <maciej.lesiczka@gmail.com>"]
edition = "2021"
description = "Lakehouse format with event time travel"
repository = "https://github.com/MaciekLesiczka/bazof"
license = "Apache-2.0"
readme = "README.md"
keywords = ["lakehouse", "event", "time-travel", "data-lake", "parquet"]
categories = ["database", "data-structures", "data-lake", "lakehouse"]

[lib]
name = "bazof"
crate-type = ["cdylib"]

[[bin]]
name = "bazof-app"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
chrono = "0.4.39"
arrow-array = "54.2.0"
arrow = "54.2.0"
thiserror = "2.0.11"
parquet = { version = "54.2.0", features = ["async", "object_store"] }
object_store = "0.11.2"
tokio = { version = "1", features = ["full"] }
rand = "0.9.0"