[workspace]
resolver = "2"
members = [
    "crates/azof",
    "crates/azof-cli",
    "crates/azof-datafusion",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Maciej Lesiczka <maciej.lesiczka@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/MaciekLesiczka/azof"