[package]
name = "azof-datafusion"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "DataFusion integration for azof lakehouse format"
repository.workspace = true
license.workspace = true
readme = "../../README.md"

[dependencies]
azof = { path = "../azof" }
datafusion = "46.0.0"
arrow-array = "54.2.0"
arrow = "54.2.0"
chrono = "0.4.39"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.77"
futures = "0.3.30"
log = "0.4.21"
object_store = "0.11.2"
